--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
