--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "lodash.chunk": "^4.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
   }
