--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash.chunk": "^4.2.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
