--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-react": "^7.18.3",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
