--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
@@ -41,3 +45,5 @@
     "redux-devtools-extension": "^2.13.8"
   }
 }
+
+
